@@ -1,3 +1,9 @@
+2006-01-26  Yves Combe  <yves@ycombe.net>
+
+	small memory fix: pixbuf not freed after use.
+
+	* src/gcompris/gcompris_confirm.c: (display_confirm):
+
 2006-01-25  Yves Combe  <yves@ycombe.net>
 
 	fix colors in confirmation window.
